--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@mui/material": "5.10.11",
     "@mui/x-data-grid": "5.17.9",
     "@popperjs/core": "2.11.6",
+    "@react-pdf/renderer": "^3.1.5",
     "@reduxjs/toolkit": "1.8.6",
     "apexcharts-clevision": "3.28.5",
     "axios": "1.1.3",
@@ -56,6 +57,7 @@
     "nprogress": "0.2.0",
     "payment": "2.4.6",
     "prismjs": "1.29.0",
+    "qrcode.react": "^3.1.0",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
