--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nprogress": "0.2.0",
     "payment": "2.4.6",
     "prismjs": "1.29.0",
+    "qrcode": "^1.5.1",
     "qrcode.react": "^3.1.0",
     "qs": "^6.11.0",
     "react": "18.2.0",
